--- a/src/main/res/values/integers.xml
+++ b/src/main/res/values/integers.xml
@@ -19,5 +19,25 @@
         <item>60000</item>
     </integer-array>
 
+    <integer-array name="settingsRealtimeTimeAfterOptionValues">
+        <item>0</item>
+        <item>30</item>
+        <item>60</item>
+        <item>120</item>
+        <item>300</item>
+        <item>600</item>
+        <item>-1</item>
+    </integer-array>
+
+    <integer-array name="settingsRealtimeTimeAfterPastOptionValues">
+        <item>0</item>
+        <item>60</item>
+        <item>120</item>
+        <item>300</item>
+        <item>600</item>
+        <item>1800</item>
+        <item>-1</item>
+    </integer-array>
+
     <integer-array name="widgetConfigureRunEveryOptionValues">@array/settingsUpdateIntervalOptionValues</integer-array>
 </resources>
