--- a/src/main/res/drawable/floatingbutton.xml
+++ b/src/main/res/drawable/floatingbutton.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:enterFadeDuration="@integer/material_motion_duration_short_1"
-    android:exitFadeDuration="@integer/material_motion_duration_short_1" >
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true">
         <shape>
