--- a/src/main/res/drawable/toolbar.xml
+++ b/src/main/res/drawable/toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="?attr/colorPrimary" />
+    <solid android:color="@color/primary" />
     <corners android:bottomLeftRadius="@dimen/toolbar_radius" android:bottomRightRadius="@dimen/toolbar_radius" />
 </shape>
