--- a/src/main/res/layout/comp_searchbar_station.xml
+++ b/src/main/res/layout/comp_searchbar_station.xml
@@ -1,37 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
-    <TextView
-        android:id="@+id/searchbar_txtSearchInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
-        android:textColor="@color/foregroundHint"
-        android:textSize="18sp"
-        android:visibility="visible"
-        android:alpha="0.5"
+    <ImageView
+        android:id="@+id/searchbar_imgIcon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:importantForAccessibility="no"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UnusedAttribute" />
 
-    <com.maddin.echtzeyt.components.StationSearchTextView
+    <com.maddin.echtzeyt.components.POISearchTextView
         android:id="@+id/searchbar_edtSearch"
-        style="@style/Theme.Echtzeyt.TextView.StationSearch.Animated"
+        style="@style/Theme.Echtzeyt.TextView.StationSearch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/searchbar_txtSearchInfo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/searchbar_layoutButtons"
+        app:layout_constraintStart_toEndOf="@+id/searchbar_imgIcon"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/spaceSearchbarMargin"
-        android:layout_width="@dimen/button_margin"
+    <LinearLayout
+        android:id="@+id/searchbar_layoutButtons"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:clipChildren="false"
+        android:gravity="center_vertical|end"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </merge>
