--- a/src/main/res/values-night/colors.xml
+++ b/src/main/res/values-night/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primary">@color/backgroundTint</color>
+    <color name="secondary">@color/foreground</color>
+
     <color name="background">#121212</color>
     <color name="backgroundTint">#303030</color>
     <color name="backgroundButtonHover">#3C3C3C</color>
@@ -11,15 +14,21 @@
     <color name="backgroundHighlight">#3B3B3B</color>
     <color name="backgroundHighlightSecond">#121212</color>
     <color name="backgroundWidgetToolbar">#202020</color>
+    <color name="backgroundDivider">#60606060</color>
     <color name="backgroundPullup">#1A1A1A</color>
     <color name="backgroundPullupSecond">#242424</color>
     <color name="backgroundNotification">#392E25</color>
+    <color name="backgroundDialog">@color/background</color>
+    <color name="backgroundDialogSecond">@color/backgroundTint</color>
+    <color name="backgroundDialogHeader">@color/backgroundDialogSecond</color>
     <color name="backgroundStationmarker">#404040</color>
     <color name="foreground">#D0D0D0</color>
     <color name="foregroundHint">#909090</color>
     <color name="foregroundText">@color/foreground</color>
     <color name="foregroundWidget">@color/foreground</color>
     <color name="foregroundNotification">#DAC8C8</color>
+    <color name="foregroundDialogHeader">@color/foreground</color>
+    <color name="foregroundDialogHeaderSecond">@color/foregroundHint</color>
     <color name="error">#804040</color>
     <color name="errorWidget">#D57E7E</color>
     <color name="success">#408040</color>
@@ -30,4 +39,8 @@
         <item>#30000010</item>
         <item>#00000000</item>
     </array>
+
+    <color name="lineForegroundHintAuto">@color/lineForegroundHintDark</color>
+    <color name="lineBackgroundWalk">#D0404040</color>
+    <color name="lineForegroundWalk">@color/lineForegroundBus</color>
 </resources>
